Updated actors and fixed minor issues

--- a/actors.html
+++ b/actors.html
@@ -162,7 +162,7 @@
                             opera Santa Barbara and the sitcom Growing Pains. He debuted in his film career by starring as
                             Josh in Critters 3 (1991). He starred in the film adaptation of the memoir This Boy's Life (1993),
                             and was...</p>
-                        <a class="btn btn-blue"  href="html_actors/actor3.html" role="button"> Continue reading </a>
+                        <a class="btn btn-blue"  href="html_actors/leonardo-dicaprio.html" role="button"> Continue reading </a>
                     </div>
                 </div>
 
@@ -180,7 +180,7 @@
                             in school plays previously.[5] Watson appeared in all eight Harry Potter films from 2001 to 2011,
                             earning...
                         </p>
-                        <a class="btn btn-blue" href="html_actors/actor4.html"> Continue reading </a>
+                        <a class="btn btn-blue" href="html_actors/emma-watson.html"> Continue reading </a>
                     </div>
                 </div>
 
