--- a/filmovi.html
+++ b/filmovi.html
@@ -138,17 +138,17 @@
                     <div class="col-sm-8 col-xl-5">
                         <h3 class="text-blue font-italic" id="name1"> </h3>
                         <dl class="row">
-                            <dt class="col-md-4"> Directed by: </dt>
+                            <dt class="col-md-4"> Režirao: </dt>
                             <dd class="col-md-8" id="director1"> </dd>
-                            <dt class="col-md-4"> Running time: </dt>
+                            <dt class="col-md-4"> Trajanje: </dt>
                             <dd class="col-md-8" id="runningTime1"> </dd>
-                            <dt class="col-md-4"> Starring: </dt>
+                            <dt class="col-md-4"> Glumci: </dt>
                             <dd class="col-md-8" id="actors1"> </dd>
-                            <dt class="col-md-4"> Release date: </dt>
+                            <dt class="col-md-4"> Dan objavljivanja: </dt>
                             <dd class="col-md-8" id="releaseDate1"> </dd>
-                            <dt class="col-md-4"> Country:</dt>
+                            <dt class="col-md-4"> Država:</dt>
                             <dd class="col-md-8" id="country1"> </dd>
-                            <dt class="col-md-4"> Popularity:</dt>
+                            <dt class="col-md-4"> Popularnost:</dt>
                             <dd class="col-md-8" id="popularity1"> </dd>
                         </dl>
 
@@ -158,17 +158,17 @@
                         </button>
                     </div>
                     <div class="col-xl-4  rounded">
-                        <h3 class="text-center text-blue"> Showings </h3>
+                        <h3 class="text-center text-blue"> Projekcije </h3>
                         <div class="mt-3 card text-center" id="showing11">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place11"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date11"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time11"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost11"> </span>
                             </div>
                         </div>
@@ -176,13 +176,13 @@
                         <div class="mt-3 card text-center" id="showing12">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place12"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date12"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time12"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost12"> </span>
                             </div>
                         </div>
@@ -190,13 +190,13 @@
                         <div class="mt-3 card text-center" id="showing13">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place13"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date13"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time13"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost13"> </span>
                             </div>
                         </div>
@@ -210,17 +210,17 @@
                     <div class="col-sm-8 col-xl-5">
                         <h3 class="text-blue font-italic" id="name2"> </h3>
                         <dl class="row">
-                            <dt class="col-md-4"> Directed by: </dt>
+                            <dt class="col-md-4"> Režirao: </dt>
                             <dd class="col-md-8" id="director2"> </dd>
-                            <dt class="col-md-4"> Running time: </dt>
+                            <dt class="col-md-4"> Trajanje: </dt>
                             <dd class="col-md-8" id="runningTime2"> </dd>
-                            <dt class="col-md-4"> Starring: </dt>
+                            <dt class="col-md-4"> Glumci: </dt>
                             <dd class="col-md-8" id="actors2"> </dd>
-                            <dt class="col-md-4"> Release date: </dt>
+                            <dt class="col-md-4"> Dan objavljivanja: </dt>
                             <dd class="col-md-8" id="releaseDate2"> </dd>
-                            <dt class="col-md-4"> Country:</dt>
+                            <dt class="col-md-4"> Država:</dt>
                             <dd class="col-md-8" id="country2"> </dd>
-                            <dt class="col-md-4"> Popularity:</dt>
+                            <dt class="col-md-4"> Popularnost:</dt>
                             <dd class="col-md-8" id="popularity2"> </dd>
                         </dl>
 
@@ -230,17 +230,17 @@
                         </button>
                     </div>
                     <div class="col-xl-4  rounded">
-                        <h3 class="text-center text-blue"> Showings </h3>
+                        <h3 class="text-center text-blue"> Projekcije </h3>
                         <div class="mt-3 card text-center" id="showing21">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place21"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date21"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time21"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost21"> </span>
                             </div>
                         </div>
@@ -248,26 +248,26 @@
                         <div class="mt-3 card text-center" id="showing22">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place22"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date22"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time22"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost22"> </span>
                             </div>
                         </div>
                         <div class="mt-3 card text-center" id="showing23">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place23"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date23"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time23"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost23"> </span>
                             </div>
                         </div>
@@ -282,17 +282,17 @@
                     <div class="col-sm-8 col-xl-5">
                         <h3 class="text-blue font-italic" id="name3"> </h3>
                         <dl class="row">
-                            <dt class="col-md-4"> Directed by: </dt>
+                            <dt class="col-md-4"> Režirao: </dt>
                             <dd class="col-md-8" id="director3"> </dd>
-                            <dt class="col-md-4"> Running time: </dt>
+                            <dt class="col-md-4"> Trajanje: </dt>
                             <dd class="col-md-8" id="runningTime3"> </dd>
-                            <dt class="col-md-4"> Starring: </dt>
+                            <dt class="col-md-4"> Glumci: </dt>
                             <dd class="col-md-8" id="actors3"> </dd>
-                            <dt class="col-md-4"> Release date: </dt>
+                            <dt class="col-md-4"> Dan objavljivanja: </dt>
                             <dd class="col-md-8" id="releaseDate3"> </dd>
-                            <dt class="col-md-4"> Country:</dt>
+                            <dt class="col-md-4"> Država:</dt>
                             <dd class="col-md-8" id="country3"> </dd>
-                            <dt class="col-md-4"> Popularity:</dt>
+                            <dt class="col-md-4"> Popularnost:</dt>
                             <dd class="col-md-8" id="popularity3"> </dd>
                         </dl>
 
@@ -302,17 +302,17 @@
                         </button>
                     </div>
                     <div class="col-xl-4  rounded">
-                        <h3 class="text-center text-blue"> Showings </h3>
+                        <h3 class="text-center text-blue"> Projekcije </h3>
                         <div class="mt-3 card text-center" id="showing31">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place31"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date31"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time31"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost31"> </span>
                             </div>
                         </div>
@@ -320,26 +320,26 @@
                         <div class="mt-3 card text-center" id="showing32">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place32"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date32"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time32"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost32"> </span>
                             </div>
                         </div>
                         <div class="mt-3 card text-center" id="showing33">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place33"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date33"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time33"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost33"> </span>
                             </div>
                         </div>
@@ -354,17 +354,17 @@
                     <div class="col-sm-8 col-xl-5">
                         <h3 class="text-blue font-italic" id="name4"> </h3>
                         <dl class="row">
-                            <dt class="col-md-4"> Directed by: </dt>
+                            <dt class="col-md-4"> Režirao: </dt>
                             <dd class="col-md-8" id="director4"> </dd>
-                            <dt class="col-md-4"> Running time: </dt>
+                            <dt class="col-md-4"> Trajanje: </dt>
                             <dd class="col-md-8" id="runningTime4"> </dd>
-                            <dt class="col-md-4"> Starring: </dt>
+                            <dt class="col-md-4"> Glumci: </dt>
                             <dd class="col-md-8" id="actors4"> </dd>
-                            <dt class="col-md-4"> Release date: </dt>
+                            <dt class="col-md-4"> Dan objavljivanja: </dt>
                             <dd class="col-md-8" id="releaseDate4"> </dd>
-                            <dt class="col-md-4"> Country:</dt>
+                            <dt class="col-md-4"> Država:</dt>
                             <dd class="col-md-8" id="country4"> </dd>
-                            <dt class="col-md-4"> Popularity:</dt>
+                            <dt class="col-md-4"> Popularnost:</dt>
                             <dd class="col-md-8" id="popularity4"> </dd>
                         </dl>
 
@@ -374,17 +374,17 @@
                         </button>
                     </div>
                     <div class="col-xl-4  rounded">
-                        <h3 class="text-center text-blue"> Showings </h3>
+                        <h3 class="text-center text-blue"> Projekcije </h3>
                         <div class="mt-3 card text-center" id="showing41">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place41"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date41"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time41"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost41"> </span>
                             </div>
                         </div>
@@ -392,26 +392,26 @@
                         <div class="mt-3 card text-center" id="showing42">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place42"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date42"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time42"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost42"> </span>
                             </div>
                         </div>
                         <div class="mt-3 card text-center" id="showing43">
                             <div class="card-header bg-blue p-1 font-weight-bold font-italic" id="place43"> </div>
                             <div class="card-body p-0">
-                                <b> Date: </b>
+                                <b> Datum: </b>
                                 <span id="date43"> </span>
                                 <br/>
-                                <b> Time: </b>
+                                <b> Vreme: </b>
                                 <span id="time43"> </span>
                                 <br/>
-                                <b> Cost: </b>
+                                <b> Cena: </b>
                                 <span id="cost43"> </span>
                             </div>
                         </div>
