--- a/glumci2.html
+++ b/glumci2.html
@@ -130,7 +130,7 @@
                             the thriller Witness (1985), for which he was nominated for the Academy Award for Best Actor;
                             and...
                         </p>
-                        <a class="btn btn-blue" href="html_actors/actor1.html"> Continue reading </a>
+                        <a class="btn btn-blue" href="html_actors/harrison-ford-sr.html"> Continue reading </a>
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
                             to 2014. Stallone wrote or co-wrote most of the 14 films in all three franchises, and directed
                             ...
                         </p>
-                        <a class="btn btn-blue" href="html_actors/actor2.html"> Continue reading </a>
+                        <a class="btn btn-blue" href="html_actors/sylvester-stallone-sr.html"> Continue reading </a>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
                             the few performers to have won Academy, Emmy, and Grammy Awards. Born in Reading, Berkshire,
                             Winslet studied drama at the Redroofs Theatre School. Her first screen appearance, at the age
                             of 15, was in the British...</p>
-                        <a class="btn btn-blue" href="html_actors/actor3.html" role="button"> Continue reading </a>
+                        <a class="btn btn-blue" href="html_actors/kate-winslet-sr.html" role="button"> Continue reading </a>
                     </div>
                 </div>
 
@@ -182,7 +182,7 @@
                             the Mr. Universe title at age 20 and went on to win the Mr. Olympia contest seven times, remaining...
                         </p>
 
-                        <a class="btn btn-blue" href="html_actors/actor4.html"> Continue reading </a>
+                        <a class="btn btn-blue" href="html_actors/arnold-schwarzenegger-sr.html"> Continue reading </a>
                     </div>
                 </div>
                 <div class="row">
@@ -190,19 +190,19 @@
                         <nav aria-label="Actor page navigation">
                             <ul class="pagination justify-content-center">
                                 <li class="page-item">
-                                    <a class="page-link" href="glumci.html" tab-index="-1" aria-label="Previous">
+                                    <a class="page-link" href="glumci.html" aria-label="Previous">
                                         <span aria-hidden="true">&laquo;</span>
                                         <span class="sr-only">Prethodni</span>
                                     </a>
                                 </li>
-                                <li class="page-item active">
+                                <li class="page-item">
                                     <a class="page-link" href="glumci.html">1</a>
                                 </li>
-                                <li class="page-item">
+                                <li class="page-item active">
                                     <a class="page-link" href="#">2</a>
                                 </li>
                                 <li class="page-item disabled">
-                                    <a class="page-link" href="#" aria-label="Next">
+                                    <a class="page-link" href="#"  tab-index="-1" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Sledeci</span>
                                     </a>
