--- a/pocetna.html
+++ b/pocetna.html
@@ -194,35 +194,29 @@
                         </div>
                         <div class="row media">
                             <div class="col-sm-4 text-center">
-                                <img class="img-fluid index-about-img mt-0" src="images/about1.jpg" alt="about1">
+                                <img class="img-fluid index-about-img mt-0 " src="images/about1.jpg" alt="about1">
                             </div>
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">Šta je to filmski festival?</h5>
+                                Filmski festival je organizovana, produžena prezentacija filmova u jednoj ili više bioskopa ili mesta za provjeru, obično u jednom gradu ili regionu. Sve više, filmski festivali pokazuju neke filmove na otvorenom. [1] Filmovi mogu biti od nedavnog datuma i, u zavisnosti od fokusa festivala, mogu uključivati međunarodna i domaća izdanja. Neki festivali fokusiraju se na određeni filmski proizvođač ili žanr (npr. Filmska noir) ili predmet (npr. Horror film festivali). Nekoliko filmskih festivala specijalizuje se za kratke filmove definirane maksimalne dužine. Filmski festivali su obično godišnji događaji. Neki filmski istoričari, uključujući Džerija Becka, [2] ne smatraju filmskim festivalima zvaničnim izdanjima filma.
                             </div>
                         </div>
                         <div class="row media">
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">Najpopularniji filmski festivali</h5>
+                                Najprestižniji filmski festivali na svetu generalno se smatraju Cannes, Berlin i Venecija. [3] Ovi festivali se ponekad nazivaju "Velika tri". [4] [5] [6] Međunarodni filmski festival u Torontu je najpopularniji festival u Severnoj Americi u pogledu prisustva; Vreme je napisalo da je "odrastao sa svog mesta kao najuticajniji festival pada na najuticajniji filmski festival, period". [7] Filmski festival u Veneciji je najstariji filmski festival u svetu. [8]
                             </div>
                             <div class="col-sm-4 order-first order-sm-last text-center">
-                                <img class="img-fluid index-about-img mt-4" src="images/about1.jpg" alt="about1">
+                                <img class="img-fluid index-about-img mt-4" src="images/cannes.jpg" alt="about1">
                             </div>
                         </div>
                         <div class="row media">
                             <div class="col-sm-4 text-center">
-                                <img class="img-fluid index-about-img mt-4" src="images/about1.jpg" alt="about1">
+                                <img class="img-fluid index-about-img mt-4" src="images/setup.jpg" alt="about1">
                             </div>
                             <div class="col-sm-8 media-body">
-                                <h5 class="mt-2 text-blue">Media heading</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-2 text-blue">Biznis model filmskih festivala</h5>
+                                Iako postoje značajni profitni festivali kao što je SKSSV, većina festivala posluje na neprofitnom modelu zasnovanog na članstvu, sa kombinacijom prodaje ulaznica, članarina i korporativnog sponzorstva koji čine većinu prihoda. Za razliku od drugih neprofitnih umetničkih dela (scenske umetnosti, muzeji, itd.), Filmski festivali obično dobijaju nekoliko donacija od strane javnosti i povremeno su organizovani kao neprofitna poslovna udruženja umjesto javnih dobrovoljnih organizacija. Članovi filmske industrije često imaju značajan kuratorski doprinos, a korporativnim sponzorima se daje mogućnost promoviranja njihovog brenda na publiku publike u zamjenu za novčane doprinose. Privatne stranke, koje često pokreću investicije za filmske projekte, predstavljaju značajne "margine" događaje. Veći festivali održavaju godišnje osoblje često angažuju u zajednici i dobrotvorne projekte izvan festivala.
                             </div>
                         </div>
                     </div>
@@ -231,21 +225,21 @@
                 <!-- ============== ICONS ================ -->
                 <div class="row mb-3 text-center">
                     <div class="col-lg-4 hover-border-blue p-3">
-                        <a href="films.html">
+                        <a href="filmovi.html">
                             <i class="display-1 fa fa-film"></i>
                             <h2>Filmovi</h2>
                             <p>Pogledajte listu svih filmova</p>
                         </a>
                     </div>
                     <div class="col-lg-4 hover-border-blue p-3">
-                        <a href="tickets.html">
+                        <a href="karte.html">
                             <i class="display-1 fa fa-ticket-alt"></i>
                             <h2>Gde kupiti karte?</h2>
                             <p>Lista prodajnih mesta i distributera gde možete kupiti karte</p>
                         </a>
                     </div>
                     <div class="col-lg-4 hover-border-blue p-3">
-                        <a href="favourites.html">
+                        <a href="omiljeno.html">
                             <i class="display-1 fa fa-list-ol"></i>
                             <h2>Omiljeni filmovi</h2>
                             <p>Kreirajte svoju listu filmova i podelite sa prijateljima.</p>
