--- a/glumci.html
+++ b/glumci.html
@@ -160,7 +160,7 @@
                             opera Santa Barbara and the sitcom Growing Pains. He debuted in his film career by starring as
                             Josh in Critters 3 (1991). He starred in the film adaptation of the memoir This Boy's Life (1993),
                             and was...</p>
-                        <a class="btn btn-blue" href="html_actors/actor3.html" role="button"> Nastavi sa čitanjem </a>
+                        <a class="btn btn-blue" href="html_actors/leonardo-dicaprio-sr.html" role="button"> Nastavi sa čitanjem </a>
                     </div>
                 </div>
 
@@ -178,7 +178,7 @@
                             in school plays previously.[5] Watson appeared in all eight Harry Potter films from 2001 to 2011,
                             earning...
                         </p>
-                        <a class="btn btn-blue" href="html_actors/actor4.html"> Nastavi sa čitanjem </a>
+                        <a class="btn btn-blue" href="html_actors/emma-watson-sr.html"> Nastavi sa čitanjem </a>
                     </div>
                 </div>
 
